--- a/9.Inline Formatting Text/1.Anchor.md
+++ b/9.Inline Formatting Text/1.Anchor.md
@@ -10,3 +10,12 @@ Apa itu anchor? Anchor (jangkar) merupakan elemen yang digunakan untuk membuat s
 
 ![Alt text](image.png)
 
+Berikut adalah daftar atribut khusus yang dapat digunakan pada elemen ini.
+
+![Alt text](image-1.png)
+
+![Alt text](image-2.png)
+
+![Alt text](image-3.png)
+
+
