--- a/8.Inline Formatting Text/1.Long Quotations.md
+++ b/8.Inline Formatting Text/1.Long Quotations.md
@@ -1,7 +1,9 @@
 # Inline Formatting Text: Long Quotations, Preformatted Text, dan Figure
 Sejauh ini, kita sudah mengenal paragraf, heading, dan juga list pada HTML. Tapi masih ada beberapa lagi yang merupakan spesial teks format yang dapat kita gunakan yaitu <blockquote>, <pre> dan <figure>.
 
-Jika pada konten kita memiliki sebuah kutipan ataupun sebuah testimonial, kita dapat gunakan format long quotations dengan menggunakan tags <blockquote>. Konten di dalam elemen <blockquote> ini dapat berupa sebuah paragraf, heading, ataupun list.
+Jika pada konten kita memiliki sebuah kutipan ataupun sebuah testimonial, kita dapat gunakan format long quotations dengan menggunakan tags (blockquote). Konten di dalam elemen (blockquote) ini dapat berupa sebuah paragraf, heading, ataupun list.
+
+tanda ini adalah syntac taq<>
 
 ![Alt text](image.png)
 
