--- a/8.Inline Formatting Text/1.Long Quotations.md
+++ b/8.Inline Formatting Text/1.Long Quotations.md
@@ -5,7 +5,7 @@ Jika pada konten kita memiliki sebuah kutipan ataupun sebuah testimonial, kita d
 
 tanda ini adalah syntac taq<>
 
-![Alt text](image.png)
+![Alt text](image-1.png)
 
 Pada elemen ini, kita dapat menggunakan atribut cite untuk menentukan sumber URL dari sebuah kutipan (jika kutipan tersebut bersumber dari sebuah situs website). Namun, tidak ada tampilan yang berbeda pada browser secara kasat mata.
 
