--- a/8.Inline Formatting Text/1.Long Quotations.md
+++ b/8.Inline Formatting Text/1.Long Quotations.md
@@ -3,7 +3,7 @@ Sejauh ini, kita sudah mengenal paragraf, heading, dan juga list pada HTML. Tapi
 
 Jika pada konten kita memiliki sebuah kutipan ataupun sebuah testimonial, kita dapat gunakan format long quotations dengan menggunakan tags (blockquote). Konten di dalam elemen (blockquote) ini dapat berupa sebuah paragraf, heading, ataupun list.
 
-tanda ini adalah syntac taq<>
+tanda ini () adalah syntac taq<>
 
 ![Alt text](image-1.png)
 
