--- a/8.Inline Formatting Text/1.Long Quotations.md
+++ b/8.Inline Formatting Text/1.Long Quotations.md
@@ -5,11 +5,26 @@ Jika pada konten kita memiliki sebuah kutipan ataupun sebuah testimonial, kita d
 
 tanda ini () adalah syntac taq<>
 
-![Alt text](image-1.png)
+![image-1.png](image-1.png)
+
+<blockquote>
+
+  <p>
+    Situs web (bahasa Inggris: website) adalah sekumpulan halaman web yang saling berhubungan yang
+    umumnya berada pada peladen yang sama berisikan kumpulan informasi yang disediakan secara
+    perorangan, kelompok, atau organisasi.
+  </p>
+</blockquote>
 
 Pada elemen ini, kita dapat menggunakan atribut cite untuk menentukan sumber URL dari sebuah kutipan (jika kutipan tersebut bersumber dari sebuah situs website). Namun, tidak ada tampilan yang berbeda pada browser secara kasat mata.
 
-![Alt text](image-1.png)
+<blockquote cite="https://id.wikipedia.org/wiki/Situs_web">
+  <p>
+    Situs web (bahasa Inggris: website) adalah sekumpulan halaman web yang saling berhubungan yang
+    umumnya berada pada peladen yang sama berisikan kumpulan informasi yang disediakan secara
+    perorangan, kelompok, atau organisasi.
+  </p>
+</blockquote>
 
 
 
