--- a/9.Inline Formatting Text/4.Short Quotations.md
+++ b/9.Inline Formatting Text/4.Short Quotations.md
@@ -7,4 +7,4 @@ Standarnya, sebuah teks yang diberi markup <q> akan ditampilkan di dalam tanda k
 
 Elemen quotation marks memiliki atribut cite untuk menentukan sumber URL dari sebuah kutipan (jika kutipan tersebut bersumber dari sebuah situs website). Namun, tidak ada perbedaan yang terlihat secara kasat mata jika dijalankan di browser.
 
-![Alt text](image-7.png)
+![image-7.png](image-7.png)
