--- a/13. Semantic HTML/1.Header dan Footer.md
+++ b/13. Semantic HTML/1.Header dan Footer.md
@@ -8,3 +8,12 @@ Pada contoh di bawah ini, elemen <header> digunakan untuk menampilkan nama situs
 
 cek kode html nya
 [Header dan Footer](<Header dan Footer.html>)
+
+Selain itu, elemen <footer> digunakan sebagai informasi hak cipta.
+
+Selain itu, elemen <header> dan <footer> dapat digunakan pada sebuah elemen <article> atau <section>. Header biasanya menampung judul dan penulis, footer dapat menampung sebuah link untuk membagikan artikel pada sebuah sosial media.
+
+# Perlu kita ketahui 
+bahwa elemen <header> dan <footer> tidak boleh ditulis di dalam elemen <header> dan <footer> lainnya (bertumpuk/nested).
+
+
