penambahan materi input

--- a/17.Input User/2. Non-Single Line Input Element.md
+++ b/17.Input User/2. Non-Single Line Input Element.md
@@ -6,12 +6,27 @@ Nah, HTML memiliki elemen khusus yang memungkinkan user menuliskan teks dalam ba
 
 Berikut contoh penerapannya.
 
+<input
+  type="text"
+  value="Belajar
+  Dasar
+  Pemrograman
+  Web"
+/>
+
+Jika diperhatikan, Anda akan melihat dua atribut pada elemen textarea, yaitu rows dan cols. Kedua atribut ini akan menentukan ukuran dari elemennya.
+
+Catatan:
+--------
+Pada contoh kode di atas, kita menemukan penggunaan atribut value. Atribut tersebut berfungsi untuk memberikan nilai default pada elemen input.
+
+Nah, HTML memiliki elemen khusus yang memungkinkan user menuliskan teks dalam banyak baris. Mari kita berkenalan dengan <textarea>. Elemen <textarea> ini berbeda dengan elemen input sebelumnya. Selain nama elemen yang menjadi pembeda, elemen textarea memiliki tag penutup agar dapat berfungsi dengan baik.
+
+Berikut contoh penerapannya.
+
 <textarea>
 Belajar
 Dasar
 Pemrograman
 Web
 </textarea>
-
-
-Jika diperhatikan, Anda akan melihat dua atribut pada elemen textarea, yaitu rows dan cols. Kedua atribut ini akan menentukan ukuran dari elemennya.
